--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
+    "cross-env": "^7.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
